# Liquid-Prediction-Markets

./: .gitignore  LICENSE  README.md
contracts/: Cargo.toml  PredictionMarket.sol
contracts/artifacts/: MiniPredictionMarket.json  MiniPredictionMarket_metadata.json  PredictionMarket.json  PredictionMarket_metadata.json  SimplePredictionMarket.json  SimplePredictionMarket_metadata.json
contracts/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  contractsSimulator.js  mockData.js  simulateLiveData.js
frontend/src/services/: contractService.js  polkadotConnection.js
